refactor: Migrate to new modular architecture and Gemini prompt system
- Refactored monolithic functions/index.ts into modular controllers
- Implemented lazy loading service factory
- Migrated from OpenAI to Google Gemini for image generation
- Added comprehensive documentation (README, API_SETUP, DATABASE_SCHEMA)
- Implemented new dynamic prompt system with category-specific templates
- Updated admin panel for improved scheduling and prompt management
- Fixed build and deployment configurations

--- a/firebase.json
+++ b/firebase.json
@@ -31,5 +31,19 @@
       "enabled": true,
       "port": 4000
     }
+  },
+  "hosting": {
+    "public": "admin/dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
